=================
Changes for Crate
=================

Unreleased
==========

 - Fixed an issue that caused stuck jobs to return an empty result instead of
   an error.

2015/08/06 0.50.3
=================

 - Updated crate-admin to 0.14.3 which includes the following changes:

   - fixed line wrapping in console result table

 - Fixed an issue which could cause the blob recovery process to hang under some
   rare circumstances

 - Fixed an issue that caused ``COPY TO .. s3`` statements to leave the cluster
   in an inaccessible state

 - Fixed an issue that could cause a count function on partitioned tables
   to cause an error if a partition was deleted concurrently.

2015/07/29 0.50.2
=================

 - Fix: reduced the amount of unnecessary data handled on select queries

 - Fixed an issue which prevented column updates to be noticed in the cluster
   on tables in custom schemas.

 - Fix: issuing ``KILL ALL`` when a ``SELECT`` statement hung due to a node
   becoming unavailable during execution could result in error response

 - Improved the error handling: In case threadpools are exhausted (due to very
   high load on the cluster) queries could get stuck instead of being aborted
   right away.

 - Fixed a bug where a job entry wasn't cleaned up on any parser/analyzer errors.

 - Fixed an issue that caused queries on blob tables to cause a
   NullPointerException if the filter in the WHERE CLAUSE resulted in a
   ``null`` value.

 - Fix: fixed an issue which caused an error if one selects a setting
   which is not set

 - Fix: fixed an issue which caused TypeConversion errors if a setting was
   selected which represents a byte size
   (e.g. indices[‘store’][‘throttle’][‘my_bytes_per_sec’])

 - Fixed a rare bug which could cause a MapperParsingException if one creates
   a new dynamic array concurrently

2015/07/16 0.50.1
=================

- Updated crate-admin to 0.14.1 which includes following changes:
